# headwind

./: .clang-format  .gitignore  .gitmodules  .qmlformat.ini  CMakeLists.txt
example/: example.cpp  example.qml
example/Pages/: TsHwTextInput.qml  TstHwBaseItem.qml  TstHwBaseItemDelegate.qml  TstHwBox.qml  TstHwGaussianBlur.qml  TstHwPopover.qml  TstHwRectangle.qml  TstHwRoundedImage.qml  TstHwTextInput.qml
headwind/: CMakeLists.txt
headwind/Controls/: HwBaseItem.qml  HwBaseItemDelegate.qml  HwBox.qml  HwGaussianBlur.qml  HwOpacityMask.qml  HwPopover.qml  HwRectangle.qml  HwRipple.qml  HwRoundedImage.qml  HwTextInput.qml  hwrectangle.cpp  hwrectangle.h
headwind/Shaders/: opacitymask.frag  opacitymask.vert
headwind/Utils/: macros.h
headwind/src/: headwind.cpp  headwind.h
headwind/vendors/HiDash/: CMakeLists.txt  LICENSE  README.md
headwind/vendors/HiDash/hidash/: CMakeLists.txt  debouncefunction.cpp  debouncefunction.h  hidash.cpp  hidash.h
headwind/vendors/HiDash/test/: CMakeLists.txt  main.cpp  main.qml  test.cpp  tst_test1.qml
